--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
+    "start": "gulp start",
     "prestart:prod": "tsc",
     "start:prod": "node dist/server.js"
   },
@@ -17,10 +17,30 @@
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
+    "sqlite3": "^3.1.11",
+    "typeorm": "0.1.0-alpha.42",
     "typescript": "^2.5.2"
   },
   "devDependencies": {
-    "@types/node": "^8.0.28",
-    "ts-node": "^3.3.0"
+    "@types/gulp": "^4.0.4",
+    "@types/node": "^8.0.26",
+    "del": "^3.0.0",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^1.4.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-tslint": "^8.1.2",
+    "gulp-typescript": "^3.2.2",
+    "gulpclass": "^0.1.2",
+    "jshint": "^2.9.5",
+    "minimatch": "^3.0.2",
+    "nodemon": "^1.11.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.7.0",
+    "tslint-config-typings": "^0.3.1",
+    "typescript": "^2.5.2"
   }
 }
