--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "typescript": "^2.5.2"
   },
   "devDependencies": {
+    "@types/del": "^3.0.0",
     "@types/gulp": "^4.0.4",
+    "@types/gulp-nodemon": "^0.0.30",
+    "@types/gulp-tslint": "^3.6.31",
     "@types/node": "^8.0.26",
-    "del": "^3.0.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.4.0",
-    "gulp-jshint": "^2.0.4",
     "gulp-nodemon": "^2.2.1",
-    "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.2",
     "gulpclass": "^0.1.2",
     "jshint": "^2.9.5",
